# automation-scripts

./: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
config/: dictation-accuracy.toml  dictation-minimal.toml  dictation-performance.toml  dictation.toml.example
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CONFIGURATION_OPTIONS.md  DEVELOPMENT.md  DICTATION_ARCHITECTURE.md  ENVIRONMENT_SETUP.md  MIGRATION-TO-UV.md  README.md  SETUP_CHECKLIST.md  SYSTEM_PROFILE.md  TROUBLESHOOTING.md  USER-GUIDE.md  USER_PREFERENCES.md  current-state.md  index.md
docs/architecture/: SYSTEM_DEPS.md  dependency-management.md
docs/bugs/: CRITICAL-BUG-DICTATION-SIGTERM.md
docs/epics/: epic-uv-migration.md
docs/qa/: qa-test-results-summary.md
docs/qa/gates/: 10-fix-sigterm-hang.yml  10.5-startup-fix.yml  DICT-001-audio-recording.yml  DICT-002-speech-transcription.yml  DICT-003-text-injection.yml  DICT-004-hotkey-wrapper.yml  DICT-005-setup-script.yml  DICT-006.1-fix-test-suite.yml  DICT-007-configuration-system.yml  DICT-008-uv-migration.yml  DICT-012-post-uv-cleanup.yml  README.md  uv-migration.9-systemd-hotkey.yml
docs/stories/: README.md  STORY-6-COMPLETION-SUMMARY.md  TEST-SUITE-FIX-SUMMARY.md  UV-MIGRATION-COMPLETION-SUMMARY.md  dictation-module-overview.md  story-1-audio-recording.md  story-10-fix-sigterm-hang.md  story-10.5-startup-fix.md  story-10.6-enhanced-diagnostics.md  story-11-config-test-docs.md  story-12-post-uv-cleanup.md  story-2-speech-transcription.md  story-3-text-injection.md  story-4-hotkey-wrapper.md  story-5-setup-script.md  story-6-documentation-testing.md  story-6.1-fix-test-suite.md  story-7-configuration-system.md  story-7-implementation-plan.md  story-8-uv-migration.md  story-9-systemd-hotkey.md
modules/dictation/: DEPENDENCIES.txt  DEPRECATED.md  MANUAL_TESTING.md  README.md  dictate.py  dictation-toggle.sh  post_restart_checklist.md  setup.sh  test-background.sh  test-dictation.sh  test_dictate.py
modules/dictation/config/: dictation.env
requirements/: DEPRECATED.md  README.md  all.txt  base.txt  dev.txt  dictation.txt
scripts/: check-hotkey-status.sh  dictation-toggle.sh  install-hotkey-service.sh  register-hotkey.sh  setup-dev.sh  unregister-hotkey.sh
src/automation_scripts/: __init__.py
src/automation_scripts/dictation/: __init__.py  __main__.py  config.py  constants.py  dictate.py
staging/: borg-backup.sh  dictate.py
systemd/: dictation-hotkey.service
tests/: README.md  __init__.py  conftest.py  test_config.py  test_constants.py  test_dictation_paste.py
